--- a/framework-res/res/values/public.xml
+++ b/framework-res/res/values/public.xml
@@ -3429,6 +3429,8 @@
     <public type="id" name="websearch" id="0x01020560" />
     <public type="id" name="find_prev" id="0x01020561" />
     <public type="id" name="find_next" id="0x01020562" />
+    <public type="id" name="fontChange" id="0x01020563" />
+    <public type="id" name="themeChange" id="0x01020564" />
     <public type="style" name="Animation" id="0x01030000" />
     <public type="style" name="Animation.Activity" id="0x01030001" />
     <public type="style" name="Animation.Dialog" id="0x01030002" />
@@ -11721,4 +11723,5 @@
     <public type="^attr-private" name="bubbleBackgroundPressColor" id="0x0116022a" />
     <public type="^attr-private" name="leFontSizeEnlarge" id="0x0116022b" />
     <public type="^attr-private" name="leFontSizeEnlargeMede" id="0x0116022c" />
+    <public type="^attr-private" name="needAccessControl" id="0x0116022d" />
 </resources>
